--- a/ProjetoBRQ/ProjetoBRQ/Views/Clientes/Details.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Clientes/Details.cshtml
@@ -3,66 +3,73 @@
     ViewBag.Title = "Details";
 }
 
-<a class="btn btn-default" href="@Url.Action("Index","Clientes")">
-    <i class="fa fa-list" aria-hidden="true"></i>
-    Listar Clientes
-</a>
+<br />
+<div class="container">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3>Informações</h3>
+        </div>
 
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <h3>Informações</h3>
-    </div>
-    <div class="panel-body">
-        <div class="row">
-            <div class="col-md-5">
-                <table class="table table-bordered table-condensed table-hover ">
-                    <tr>
-                        <td>
-                            <b>@Html.LabelFor(m => m.Nome)</b>
-                        </td>
-                        <td>
-                            @Html.DisplayFor(m => m.Nome)
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <b>@Html.LabelFor(m => m.Email)</b>
-                        </td>
-                        <td>
-                            @Html.DisplayFor(m => m.Email)
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <b>@Html.LabelFor(m => m.Telefone)</b>
-                        </td>
-                        <td>
-                            @Html.DisplayFor(m => m.Telefone)
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <b>@Html.LabelFor(m => m.Endereco)</b>
-                        </td>
-                        <td>
-                            @Html.DisplayFor(m => m.Endereco)
-                        </td>
-                    </tr>
-                    @if (Model.Complemento != null)
-                    {
+        <a class="btn btn-default" href="@Url.Action("Index","Clientes")">
+            <i class="fa fa-list" aria-hidden="true"></i>
+            Listar Clientes
+        </a>
+
+        <div class="panel-body">
+            <div class="row">
+                <div class="col-md-5">
+                    <table class="table table-bordered table-condensed table-hover ">
                         <tr>
                             <td>
-                                <b>@Html.LabelFor(m => m.Complemento)</b>
+                                <b>@Html.LabelFor(m => m.Nome)</b>
                             </td>
                             <td>
-                                @Html.DisplayFor(m => m.Complemento)
+                                @Html.DisplayFor(m => m.Nome)
                             </td>
                         </tr>
-                    }
-
-                </table>
+                        <tr>
+                            <td>
+                                <b>@Html.LabelFor(m => m.Email)</b>
+                            </td>
+                            <td>
+                                @Html.DisplayFor(m => m.Email)
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <b>@Html.LabelFor(m => m.Telefone)</b>
+                            </td>
+                            <td>
+                                @Html.DisplayFor(m => m.Telefone)
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <b>@Html.LabelFor(m => m.Endereco)</b>
+                            </td>
+                            <td>
+                                @Html.DisplayFor(m => m.Endereco)
+                            </td>
+                        </tr>
+                        @if (Model.Complemento != null)
+                        {
+                            <tr>
+                                <td>
+                                    <b>@Html.LabelFor(m => m.Complemento)</b>
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(m => m.Complemento)
+                                </td>
+                            </tr>
+                        }
+                    </table>
+                </div>
             </div>
         </div>
+        <a href="@Url.Action("Edit","Clientes", new { Id = Model.Id })">
+            <i class="fa fa-edit" aria-hidden="true"></i>
+            Editar
+        </a>
     </div>
-    <a href="@Url.Action("Edit","Clientes", new { Id = Model.Id })">Edit</a>
 </div>
+<br />
