--- a/ProjetoBRQ/ProjetoBRQ/Views/Clientes/Index.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Clientes/Index.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "Index";
 }
 
+
 <style>
     .paged {
         border: 1px solid black;
@@ -15,41 +16,47 @@
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
+                <h4 class="modal-title">Excluir</h4>
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Modal Header</h4>
             </div>
             <div class="modal-body">
-                <p>Você deseja deletar a noticia?</p>
+                <p>Você tem certeza de que deseja deletar este cliente?</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Não</button>
             </div>
         </div>
     </div>
 </div>
 
-<div id="content" class="col-md-12">
+<br />
+<div class="container">
+    <h2>Clientes</h2>
+    <div id="content" class="col-md-12">
+        
+        @Html.ActionLink("Cadastrar Clientes", "Create", "Clientes", new { @class = "btn btn-default" })
 
-    @Html.ActionLink("Cadastrar Clientes","Create","Clientes", new { @class = "btn btn-default" })
-
-    <table id="table" class="table table-bordered table-hover table-striped">
-        <tr>
-            <td>@Html.TextBoxFor(m => m.Id, new { @class = "form-control" })</td>
-            <td>@Html.TextBoxFor(m => m.Cpf, new { @class = "form-control" })</td>
-            <td>@Html.TextBoxFor(m => m.Nome, new { @class = "form-control" })</td>
-            <td>@Html.TextBoxFor(m => m.Email, new { @class = "form-control" })</td>
-        </tr>
-        <tr id="head">
-            <td>@Html.LabelFor(m => m.Id)</td>
-            <td>@Html.LabelFor(m => m.Cpf)</td>
-            <td>@Html.LabelFor(m => m.Nome)</td>
-            <td>@Html.LabelFor(m => m.Email)</td>
-            <td>Ações</td>
-        </tr>
-    </table>
-    <p class="text-center"><i id="load" class="fa fa-spinner fa-spin" style="font-size:54px"></i></p>
+        <table id="table" class="table table-bordered table-hover table-striped">
+            <tr>
+                <td>@Html.TextBoxFor(m => m.Id, new { @class = "form-control", @placeholder = "Pesquisar por ID" })</td>
+                <td>@Html.TextBoxFor(m => m.Cpf, new { @class = "form-control", @placeholder = "Pesquisar por CPF" })</td>
+                <td>@Html.TextBoxFor(m => m.Nome, new { @class = "form-control", @placeholder = "Pesquisar por nome" })</td>
+                <td>@Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Pesquisar por email" })</td>
+            </tr>
+            <tr id="head">
+                <td>@Html.LabelFor(m => m.Id)</td>
+                <td>@Html.LabelFor(m => m.Cpf)</td>
+                <td>@Html.LabelFor(m => m.Nome)</td>
+                <td>@Html.LabelFor(m => m.Email)</td>
+                <td>Ações</td>
+            </tr>
+        </table>
+        <p class="text-center"><i id="load" class="fa fa-spinner fa-spin" style="font-size: 54px"></i></p>
+    </div>
+    <div id="page"></div>
 </div>
-<div id="page"></div>
+<br />
+
 <script>
     initTable()
     $('#Id').keypress(function (e) {
@@ -76,16 +83,16 @@
         $.ajax({
             type: "GET",
             url: `@Url.Action("TableIndex", "Clientes")?Page=null&Id=${$('#Id').val()}&Cpf=${$("#Cpf").val()}&Nome=${$("#Nome").val()}&Email=${$("#Email").val()}`,
-            dataType: "json",
-            success: function (data) {
-                createTable(data);
-                $('#load').css('display', 'none');
-            }
-        });
+    dataType: "json",
+        success: function (data) {
+            createTable(data);
+            $('#load').css('display', 'none');
+        }
+    });
     });
 
     $(document).on('click', '.delete', function () {
-        $('.modal-body').append(`<a class='btn btn-default' href="@Url.Action("Delete","Clientes")/${$(this).attr('id').split('-')[1]}">isso ai</a>`)
+        $('.modal-footer').append(`<a class='btn btn-default' href="@Url.Action("Delete","Clientes")/${$(this).attr('id').split('-')[1]}">Sim</a>`)
     });
 
     function enterPress(e) {
@@ -101,13 +108,13 @@
         $.ajax({
             type: "GET",
             url: `@Url.Action("TableIndex", "Clientes")?Page=null&Id=${$('#Id').val()}&Cpf=${$("#Cpf").val()}&Nome=${$("#Nome").val()}&Email=${$("#Email").val()}`,
-            dataType: "json",
-            success: function (data) {
-                createTable(data);
-                createPaged(data);
-                $('#load').css('display', 'none');
-            }
-        });
+    dataType: "json",
+        success: function (data) {
+            createTable(data);
+            createPaged(data);
+            $('#load').css('display', 'none');
+        }
+    });
     }
 
     function createPaged(data) {
@@ -137,5 +144,3 @@
         $('#table').append(table);
     }
 </script>
-
-<h2>Index</h2>
