--- a/ProjetoBRQ/ProjetoBRQ/Views/News/Index.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/News/Index.cshtml
@@ -93,7 +93,8 @@
     }
 
     $(document).on('click', '.delete', function () {
-        $('.modal-footer').append(`<a href="@Url.Action("Delete","News")/${$(this).attr('id').split('-')[1]}">Sim</a>`)
+        $(".delete-yes-modal").remove();
+        $('.modal-footer').append(`<a class='btn btn-default delete-yes-modal' href="@Url.Action("Delete","News")/${$(this).attr('id').split('-')[1]}">Sim</a>`)
     });
 
     $(document).on('click', '.paged', function () {
