--- a/ProjetoBRQ/ProjetoBRQ/Views/Shared/_Layout.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <title>@ViewBag.Title - Meu Aplicativo ASP.NET</title>
+    <title>@ViewBag.Title - BitSeeks</title>
 
     <!-- Bootstrap core CSS -->
     <link href="~/Content/Layout/vendor/bootstrap/css/bootstrap.css" rel="stylesheet" />
@@ -16,59 +16,26 @@
     <link href="~/Content/Layout/css/simple-sidebar.css" rel="stylesheet" />
 
     <link href="~/Content/sidebarStyle.css" rel="stylesheet" />
-
-    @*@Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")*@
+    <link href="~/Content/FooterStyle.css" rel="stylesheet"/>    
 </head>
+
 <body>
-    <style>
-        html {
-            position: relative;
-            min-height: 100%;
-        }
-
-        body {
-            margin: 0 0 60px;
-            /* bottom = footer height */
-        }
-
-        header {
-            min-height: 255px;
-            background-color: blue;
-        }
-
-        article {
-            padding-bottom: 60px;
-            width: 900px;
-            margin: 0 auto;
-        }
-
-        footer {
-            position: absolute;
-            bottom: 0px;
-            width: 100%;
-            height: 60px;
-            background-color: green;
-        }
-    </style>
-
     @Html.Partial("_SideBarAdm")
 
-    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         @Html.Partial("_ToogleForSideBarAdm")
 
-
         <div class="container">
-            <a class="navbar-brand" href="#">Nome do APP</a>
+            <a class="navbar-brand" href="#">BitSeeks</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        @Html.ActionLink("Home", "Index", "Home", routeValues: null, htmlAttributes: new { @class = "nav-link", id = "homeLink" })
                     </li>
                     <li class="nav-item">
                         @Html.ActionLink("Novidades", "Novidades", "Home", routeValues: null, htmlAttributes: new { @class = "nav-link", id = "loginLink" })
@@ -79,9 +46,9 @@
                 </ul>
                 <ul class="navbar-nav">
                     @Html.Partial("_LoginPartial")
-
                 </ul>
             </div>
+
         </div>
     </nav>
 
@@ -89,14 +56,11 @@
         @RenderBody()
     </div>
 
-    <!-- Footer -->
     <footer class="py-5 bg-dark">
         <div class="container">
             <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
         </div>
-        <!-- /.container -->
     </footer>
-
 
     <script src="~/Scripts/jquery-2.1.1.min.js"></script>
     @*<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>*@
