--- a/ProjetoBRQ/ProjetoBRQ/Views/News/Details.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/News/Details.cshtml
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="panel panel-default">
         <div class="panel-heading">
-            <h3>Informações</h3>
+            <h2>Informações</h2>
         </div>
         <a class="btn btn-default" href="@Url.Action("Index","News")">
             <i class="fa fa-list" aria-hidden="true"></i>
@@ -45,7 +45,7 @@
                 <div class="col-md-5">
                     @if (Model.ImgNews.Count() > 0)
                     {
-                        <img src="@Model.ImgNews.FirstOrDefault().Base64Image()">
+                        <img class="img-fluid" src="@Model.ImgNews.FirstOrDefault().Base64Image()">
                     }
                     else
                     {
@@ -54,9 +54,15 @@
                 </div>
             </div>
         </div>
+
+        @*Link para ações*@
         <a href="@Url.Action("Edit","News", new { Id = Model.Id })">
             <i class="fa fa-edit" aria-hidden="true"></i>
             Editar
+        </a>
+        <a href="@Url.Action("Preview","News", new { Id = Model.Id })">
+            <i class="fa fa-newspaper-o" aria-hidden="true"></i>
+            Visualizar
         </a>
     </div>
 </div>
