--- a/ProjetoBRQ/ProjetoBRQ/Views/News/Index.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/News/Index.cshtml
@@ -3,14 +3,6 @@
     ViewBag.Title = "Index";
 }
 
-
-<style>
-    .paged {
-        border: 1px solid black;
-        padding: 3px;
-    }
-</style>
-
 <br />
 <div class="container">
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-hidden="true">
@@ -34,23 +26,27 @@
     <div id="content" class="col-md-12">
         <h2>Notícias</h2>
 
-        @Html.ActionLink("Cadastrar Noticias", "Create", "News", new { @class = "btn btn-default" })
+        <a href="@Url.Action("Create","News")">
+            <i class="fa fa-plus" aria-hidden="true"></i>
+            Cadastrar noticias
+        </a>
 
         <table id="table" class="table table-bordered table-hover table-striped">
             <tr>
-                <td>@Html.TextBoxFor(m => m.Id, new { @class = "form-control" })</td>
-                <td>@Html.TextBoxFor(m => m.Title, new { @class = "form-control" })</td>
+                <td width="17%">@Html.TextBoxFor(m => m.Id, new { @class = "form-control", @placeholder = "Pesquisar por ID" })</td>
+                <td>@Html.TextBoxFor(m => m.Title, new { @class = "form-control", @placeholder = "Pesquisar por titulo" })</td>
             </tr>
             <tr id="head">
                 <td>@Html.LabelFor(m => m.Id)</td>
                 <td>@Html.LabelFor(m => m.Title)</td>
-                <td>@Html.LabelFor(m => m.Description)</td>
+                @*<td>@Html.LabelFor(m => m.Description)</td>*@
                 <td>Ações</td>
             </tr>
         </table>
         <p class="text-center"><i id="load" class="fa fa-spinner fa-spin" style="font-size: 54px"></i></p>
-    </div>
-    <div id="page"></div>
+
+        <ul class="pagination" id="page"></ul>
+    </div>    
 </div>
 <br />
 
@@ -74,7 +70,7 @@
 
     function removeElements() {
         $(".dynamic").remove();
-        $(".paged").remove();
+        $(".page-item").remove();
     }
 
     function initTable() {
@@ -83,13 +79,13 @@
         $.ajax({
             type: "GET",
             url: `@Url.Action("TableIndex", "News")?Page=null&Id=${$('#Id').val()}&Title=${$("#Title").val()}`,
-    dataType: "json",
-        success: function (data) {
-            createTable(data);
-            createPaged(data);
-            $('#load').css('display', 'none');
-        }
-    });
+            dataType: "json",
+            success: function (data) {
+                createTable(data);
+                createPaged(data);
+                $('#load').css('display', 'none');
+            }
+        });
     }
 
     $(document).on('click', '.delete', function () {
@@ -97,50 +93,55 @@
         $('.modal-footer').append(`<a class='btn btn-default delete-yes-modal' href="@Url.Action("Delete","News")/${$(this).attr('id').split('-')[1]}">Sim</a>`)
     });
 
-    $(document).on('click', '.paged', function () {
+    $(document).on('click', '.page-link', function () {
         removeElements();
+
         var id = $(this).attr('id').split('-')[1];
+
         $('#load').css('display', 'inline-block');
         $.ajax({
             type: "GET",
             url: `@Url.Action("TableIndex", "News")?Page=${id}&Id=${$('#Id').val()}&Title=${$("#Title").val()}`,
-    dataType: "json",
-    success: function (data) {
-        createTable(data);
-        createPaged(data,id);
-        $('#load').css('display', 'none');
-    }
-    });
+            dataType: "json",
+            success: function (data) {
+                createTable(data);
+                createPaged(data,id);
+                $('#load').css('display', 'none');
+            }
+        });
     });
 
     function createPaged(data, id = 1) {
-        var html = '';
+        var html = '';   
 
         for (var i = 1; i <= data.countPages; i++) {
-            if(i == id)
-                html += `<a class='paged' href='#' style='background-color:blue' id="paged-${i}">${i}</a>`;
-        else
-            html += `<a class='paged' href='#' id="paged-${i}">${i}</a>`;
+            if (i == id) {
+                html += `<li class="page-item active"><a class="page-link" href="#" id="paged-${i}">${i}</a></li>`;
+                //html += `<a class='paged' href='#' style='background-color:blue' id="paged-${i}"></a>`;
+            } else {
+                html += `<li class="page-item"><a class="page-link" href="#" id="paged-${i}">${i}</a></li>`;
+                //html += `<a class='paged' href='#' id="paged-${i}">${i}</a>`;
+            }
         }
         $('#page').append(html);
     }
 
-        function createTable(data) {
-            var table = '';
-            for (var i = 0; i < data.list.length; i++) {
-                table += '<tr class="dynamic">';
-                table += `<td> ${data.list[i].Id}</td>`;
-                table += `<td> ${data.list[i].Title}</td>`;
-                table += `<td> ${data.list[i].Description}</td>`;
-                table += '<td>'
-                table += `<a href="@Url.Action("Details","News")/${data.list[i].Id}"><i class="fa fa-info" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`;
-                table += `<a href="@Url.Action("Edit","News")/${data.list[i].Id}"><i class="fa fa-pencil" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`;
-                table += `<a href='#' class='delete' id='delete-${data.list[i].Id}' data-toggle='modal' data-target='#myModal'><i class="fa fa-trash-o" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`
-                table += `<a href="@Url.Action("Preview","News")/${data.list[i].Id}"><i class="fa fa-newspaper-o" aria-hidden="true" style='color:black'></i></a>`
-                table += '</td>';
-                table += '</tr>'
-            }
-            $('#table').append(table);
+    function createTable(data) {
+        var table = '';
+        for (var i = 0; i < data.list.length; i++) {
+            table += '<tr class="dynamic">';
+            table += `<td> ${data.list[i].Id}</td>`;
+            table += `<td> ${data.list[i].Title}</td>`;
+            //table += `<td> ${data.list[i].Description}</td>`;
+            table += '<td>'
+            table += `<a href="@Url.Action("Details","News")/${data.list[i].Id}"><i class="fa fa-info" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`;
+            table += `<a href="@Url.Action("Edit","News")/${data.list[i].Id}"><i class="fa fa-pencil" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`;
+            table += `<a href='#' class='delete' id='delete-${data.list[i].Id}' data-toggle='modal' data-target='#myModal'><i class="fa fa-trash-o" aria-hidden="true" style='color:black'></i></a>&nbsp&nbsp`;
+            table += `<a href="@Url.Action("Preview","News")/${data.list[i].Id}"><i class="fa fa-newspaper-o" aria-hidden="true" style='color:black'></i></a>`;
+            table += '</td>';
+            table += '</tr>';
         }
+        $('#table').append(table);
+    }
 
 </script>
