--- a/ProjetoBRQ/ProjetoBRQ/Views/Shared/_SideBarAdm.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Shared/_SideBarAdm.cshtml
@@ -1,75 +1,83 @@
 ﻿@using Microsoft.AspNet.Identity
-
 @if (Request.IsAuthenticated)
 {
+    if (User.IsInRole("ADMIN"))
+    {
     <!-- Sidebar -->
-    <div id="wrapper">
-        <div id="sidebar-wrapper">
-            <ul class="sidebar-nav">
-                <li class="sidebar-brand">
-                    <a href="#">
-                        Administrador
-                    </a>
-                </li>
+        <div id="wrapper" class="toggled">
+            <!-- Sidebar -->
+            <div id="sidebar-wrapper">
 
-                <li class="nav-item" data-placement="right" title="Components">
-                    <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponentsNoticias" data-parent="#exampleAccordion">
-                        <span class="nav-link-text">Notícias</span>
-                    </a>
-                    <ul class="sidenav-second-level collapse" id="collapseComponentsNoticias">
-                        <li>
-                            @Html.ActionLink("Cadastrar", "Create", "News", routeValues: null, htmlAttributes: new { id = "createNewsLink" })
+                <div id="sideBarAdm">
+                    <ul class="sidebar-nav" style="margin-left: 0;">
+                        <li class="sidebar-brand">
+                            <a href="#menu-toggle" id="menu-toggle" style="margin-top: 20px; float: right;"><i class="fa fa-bars " style="font-size: 20px !Important;" aria-hidden="true" aria-hidden="true"></i>
                         </li>
                         <li>
-                            @Html.ActionLink("Listar", "Index", "News", routeValues: null, htmlAttributes: new { id = "indexNewsLink" })
+                            <a class="nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponentsNoticias" data-parent="#exampleAccordion">
+                                <i class="fa fa-newspaper-o" aria-hidden="true"></i>
+                                <span style="margin-left: 10px;">Noticias</span>
+                            </a>
+                            <ul class="sidenav-second-level collapse" id="collapseComponentsNoticias">
+                                <li>
+                                    @Html.ActionLink("Cadastrar", "Create", "News", routeValues: null, htmlAttributes: new { id = "createNewsLink" })
+                                </li>
+                                <li>
+                                    @Html.ActionLink("Listar", "Index", "News", routeValues: null, htmlAttributes: new { id = "indexNewsLink" })
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <a class="nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponentsContatos" data-parent="#exampleAccordion">
+                                <i class="fa fa-address-card-o" aria-hidden="true"></i>
+                                <span style="margin-left: 10px;">Contatos</span>
+                            </a>
+                            <ul class="sidenav-second-level collapse" id="collapseComponentsContatos">
+                                <li>
+                                    @Html.ActionLink("Cadastrar", "Create", "Contatos", routeValues: null, htmlAttributes: new { id = "createContatosLink" })
+                                </li>
+                                <li>
+                                    @Html.ActionLink("Listar", "Index", "Contatos", routeValues: null, htmlAttributes: new { id = "indexContatosLink" })
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <a class="nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponentsClientes" data-parent="#exampleAccordion">
+                                <i class="fa fa-handshake-o" aria-hidden="true"></i>
+                                <span style="margin-left: 10px;">Clientes</span>
+                            </a>
+                            <ul class="sidenav-second-level collapse" id="collapseComponentsClientes">
+                                <li>
+                                    @Html.ActionLink("Cadastrar", "Create", "Clientes", routeValues: null, htmlAttributes: new { id = "createClientesLink" })
+                                </li>
+                                <li>
+                                    @Html.ActionLink("Listar", "Index", "Clientes", routeValues: null, htmlAttributes: new { id = "indexClientesLink" })
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <a class="nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponentsInvestimentos" data-parent="#exampleAccordion">
+                                <i class="fa fa-money" aria-hidden="true"></i>
+                                <span style="margin-left: 10px;">Investimentos</span>
+                            </a>
+                            <ul class="sidenav-second-level collapse" id="collapseComponentsInvestimentos">
+                                <li>
+                                    @Html.ActionLink("Cadastrar", "Create", "Investiment", routeValues: null, htmlAttributes: new { id = "createClientesLink" })
+                                </li>
+                                <li>
+                                    @Html.ActionLink("Listar", "Index", "Investiment", routeValues: null, htmlAttributes: new { id = "indexClientesLink" })
+                                </li>
+                            </ul>
                         </li>
                     </ul>
-                </li>
+                </div>
 
-                <li class="nav-item" data-placement="right" title="Components">
-                    <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponentsContatos" data-parent="#exampleAccordion">
-                        <span class="nav-link-text">Contatos</span>
-                    </a>
-                    <ul class="sidenav-second-level collapse" id="collapseComponentsContatos">
-                        <li>
-                            @Html.ActionLink("Cadastrar", "Create", "Contatos", routeValues: null, htmlAttributes: new { id = "createContatosLink" })
-                        </li>
-                        <li>
-                            @Html.ActionLink("Listar", "Index", "Contatos", routeValues: null, htmlAttributes: new { id = "indexContatosLink" })
-                        </li>
-                    </ul>
-                </li>
-
-                <li class="nav-item" data-placement="right" title="Components">
-                    <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponentsClientes" data-parent="#exampleAccordion">
-                        <span class="nav-link-text">Clientes</span>
-                    </a>
-                    <ul class="sidenav-second-level collapse" id="collapseComponentsClientes">
-                        <li>
-                            @Html.ActionLink("Cadastrar", "Create", "Clientes", routeValues: null, htmlAttributes: new { id = "createClientesLink" })
-                        </li>
-                        <li>
-                            @Html.ActionLink("Listar", "Index", "Clientes", routeValues: null, htmlAttributes: new { id = "indexClientesLink" })
-                        </li>
-                    </ul>
-                </li>
-
-                <li class="nav-item" data-placement="right" title="Components">
-                    <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponentsInvestimentos" data-parent="#exampleAccordion">
-                        <span class="nav-link-text">Investimentos</span>
-                    </a>
-                    <ul class="sidenav-second-level collapse" id="collapseComponentsInvestimentos">
-                        <li>
-                            @Html.ActionLink("Cadastrar", "Create", "Investiment", routeValues: null, htmlAttributes: new { id = "createClientesLink" })
-                        </li>
-                        <li>
-                            @Html.ActionLink("Listar", "Index", "Investiment", routeValues: null, htmlAttributes: new { id = "indexClientesLink" })
-                        </li>
-                    </ul>
-                </li>
-
-            </ul>
+            </div>
+            <!-- /#sidebar-wrapper -->
         </div>
-    </div>
     <!-- /#sidebar-wrapper -->
+    }
 }
