--- a/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Index.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Index.cshtml
@@ -2,20 +2,13 @@
 @{
     ViewBag.Title = "Index";
 }
-<style>
-    .paged {
-        border: 1px solid black;
-        padding: 3px;
-    }
-</style>
-
 <div id="myModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">Excluir</h4>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>                
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
             <div class="modal-body">
                 <p>Você tem certeza de que deseja deletar este contato?</p>
@@ -26,15 +19,18 @@
         </div>
     </div>
 </div>
-
 <br />
 <div class="container">
-    <h2>Contatos</h2>
     <div id="content" class="col-md-12">
-        @Html.ActionLink("Cadastrar Contatos", "Create", "Contatos", new { @class = "btn btn-default" })
+        <h2>Contatos</h2>
+        <a href="@Url.Action("Create","Contatos")">
+            <i class="fa fa-plus" aria-hidden="true"></i>
+            Cadastrar Contatos
+        </a>
+
         <table id="table" class="table table-bordered table-hover table-striped">
             <tr>
-                <td>@Html.TextBoxFor(m => m.Id, new { @class = "form-control", @placeholder = "Pesquisar por ID" })</td>
+                <td width="17%">@Html.TextBoxFor(m => m.Id, new { @class = "form-control", @placeholder = "Pesquisar por ID" })</td>
                 <td>@Html.TextBoxFor(m => m.Nome, new { @class = "form-control", @placeholder = "Pesquisar por nome" })</td>
                 <td>@Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Pesquisar por email" })</td>
             </tr>
@@ -46,14 +42,14 @@
             </tr>
         </table>
         <p class="text-center"><i id="load" class="fa fa-spinner fa-spin" style="font-size:54px"></i></p>
+
+        <ul class="pagination" id="page"></ul>
     </div>
-    <div id="page"></div>
+
 </div>
 <br />
-
-<script>
-
-    initTable()
+<script type="text/javascript">
+    //Inicio - Scripts para pesquisa
     $('#Id').keypress(function (e) {
         enterPress(e);
     });
@@ -66,37 +62,24 @@
         enterPress(e);
     });
 
-    $(document).on('click', '.delete', function () {
-        $(".delete-yes-modal").remove();
-        $('.modal-footer').append(`<a class='btn btn-default delete-yes-modal' href="@Url.Action("Delete","Contatos")/${$(this).attr('id').split('-')[1]}">Sim</a>`)
-    });
-
-    $(document).on('click', '.paged', function () {
-
-        var id = $(this).attr('id').split('-')[1];
-        $(".dynamic").remove();
-        $('#load').css('display', 'inline-block');
-        $.ajax({
-            type: "GET",
-            url: `@Url.Action("TableIndex", "Clientes")?Page=null&Id=${$('#Id').val()}&Cpf=${$("#Cpf").val()}&Nome=${$("#Nome").val()}&Email=${$("#Email").val()}`,
-            dataType: "json",
-            success: function (data) {
-                createTable(data);
-                $('#load').css('display', 'none');
-            }
-        });
-    });
-
     function enterPress(e) {
         if (e.which == 13) {
             initTable();
             $(this).blur();
         }
     }
+    //Fim - Scripts para pesquisa
+
+    initTable()
+
+    function removeElements() {
+        $(".dynamic").remove();
+        $(".page-item").remove();
+    }
 
     function initTable() {
-        $(".dynamic").remove();
-        $(".paged").remove();
+        removeElements();
+
         $.ajax({
             type: "GET",
             url: `@Url.Action("TableIndex", "Contatos")?Page=null&Id=${$('#Id').val()}&Nome=${$("#Nome").val()}&Email=${$("#Email").val()}`,
@@ -109,17 +92,47 @@
         });
     }
 
-    function createPaged(data) {
+    $(document).on('click', '.delete', function () {
+        $(".delete-yes-modal").remove();
+        $('.modal-footer').append(`<a class='btn btn-default delete-yes-modal' href="@Url.Action("Delete","Contatos")/${$(this).attr('id').split('-')[1]}">Sim</a>`)
+    });
+
+    $(document).on('click', '.page-link', function () {
+        removeElements();
+
+        var id = $(this).attr('id').split('-')[1];
+
+        $('#load').css('display', 'inline-block');
+        $.ajax({
+            type: "GET",
+            url: `@Url.Action("TableIndex", "Contatos")?Page=null&Id=${$('#Id').val()}&Nome=${$("#Nome").val()}&Email=${$("#Email").val()}`,
+            dataType: "json",
+            success: function (data) {
+                createTable(data);
+                createPaged(data,id);
+                $('#load').css('display', 'none');
+            }
+        });
+    });
+
+    function createPaged(data, id = 1) {
         var html = '';
 
-        for (var i = 1; i <= data.countPages; i++) {
-            html += `<a class='paged' href='#' id="paged-${i}">${i}</a>`;
+        for (var i = 1; i <= data.countPages+1; i++) {
+            if (i == id) {
+                html += `<li class="page-item active"><a class="page-link" href="#" id="paged-${i}">${i}</a></li>`;
+                //html += `<a class='paged' href='#' id="paged-${i}">${i}</a>`;
+            } else {
+                html += `<li class="page-item"><a class="page-link" href="#" id="paged-${i}">${i}</a></li>`;
+                //html += `<a class='paged' href='#' id="paged-${i}">${i}</a>`;
+            }
         }
         $('#page').append(html);
     }
 
     function createTable(data) {
         var table = '';
+
         for (var i = 0; i < data.list.length; i++) {
             table += '<tr class="dynamic">';
             table += `<td> ${data.list[i].Id}</td>`;
