--- a/ProjetoBRQ/ProjetoBRQ/Views/Shared/_Layout.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Shared/_Layout.cshtml
@@ -13,9 +13,9 @@
 
     <!-- Custom styles for this template -->
     <link href="~/Content/Layout/css/one-page-wonder.css" rel="stylesheet" />
-    <link href="~/Content/Layout/css/simple-sidebar.css" rel="stylesheet" />
+    @*<link href="~/Content/Layout/css/simple-sidebar.css" rel="stylesheet" />*@
 
-    <link href="~/Content/sidebarStyle.css" rel="stylesheet" />
+    <link href="~/Content/SideBarStyle.css" rel="stylesheet" />
     <link href="~/Content/FooterStyle.css" rel="stylesheet"/>    
 </head>
 
@@ -23,7 +23,7 @@
     @Html.Partial("_SideBarAdm")
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        @Html.Partial("_ToogleForSideBarAdm")
+        @*@Html.Partial("_ToogleForSideBarAdm")*@
 
         <div class="container">
             <a class="navbar-brand" href="#">BitSeeks</a>
@@ -73,7 +73,7 @@
 
     <!-- Menu Toggle Script -->
     <script>
-        $("#menu-toggle").click(function (e) {
+        $("#wrapper").hover(function (e) {
             e.preventDefault();
             $("#wrapper").toggleClass("toggled");
         });
