adicionado msg de exclusão va TempData

--- a/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Index.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Index.cshtml
@@ -23,6 +23,9 @@
 <div class="container">
     <div id="content" class="col-md-12">
         <h2>Contatos</h2>
+
+        @Html.Partial("_MsgDelete")
+
         <a href="@Url.Action("Create","Contatos")">
             <i class="fa fa-plus" aria-hidden="true"></i>
             Cadastrar Contatos
