--- a/ProjetoBRQ/ProjetoBRQ/Views/Investiment/Index.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Investiment/Index.cshtml
@@ -29,6 +29,9 @@
 <div class="container">
     <div id="content" class="col-md-12">
         <h2>Investimentos</h2>
+
+        @Html.Partial("_MsgDelete")
+
         <a href="@Url.Action("Create","Investiment")">
             <i class="fa fa-plus" aria-hidden="true"></i>
             Cadastrar Investimento
