--- a/ProjetoBRQ/ProjetoBRQ/Views/Clientes/Index.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Clientes/Index.cshtml
@@ -23,6 +23,9 @@
 <div class="container">
     <div id="content" class="col-md-12">
         <h2>Clientes</h2>
+
+        @Html.Partial("_MsgDelete")
+
         <a href="@Url.Action("Create","Clientes")">
             <i class="fa fa-plus" aria-hidden="true"></i>
             Cadastrar Clientes
