--- a/ProjetoBRQ/ProjetoBRQ/Views/Clientes/Index.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Clientes/Index.cshtml
@@ -112,7 +112,7 @@
         $('#load').css('display', 'inline-block');
         $.ajax({
             type: "GET",
-            url: `@Url.Action("TableIndex", "Clientes")?Page=null&Id=${$('#Id').val()}&Cpf=${$("#Cpf").val()}&Nome=${$("#Nome").val()}&Email=${$("#Email").val()}`,
+            url: `@Url.Action("TableIndex", "Clientes")?Page=${id}&Id=${$('#Id').val()}&Cpf=${$("#Cpf").val()}&Nome=${$("#Nome").val()}&Email=${$("#Email").val()}`,
             dataType: "json",
             success: function (data) {
                 createTable(data);
