--- a/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Index.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Contatos/Index.cshtml
@@ -108,7 +108,7 @@
         $('#load').css('display', 'inline-block');
         $.ajax({
             type: "GET",
-            url: `@Url.Action("TableIndex", "Contatos")?Page=null&Id=${$('#Id').val()}&Nome=${$("#Nome").val()}&Email=${$("#Email").val()}`,
+            url: `@Url.Action("TableIndex", "Contatos")?Page=${id}&Id=${$('#Id').val()}&Nome=${$("#Nome").val()}&Email=${$("#Email").val()}`,
             dataType: "json",
             success: function (data) {
                 createTable(data);
