--- a/ProjetoBRQ/ProjetoBRQ/Views/Home/Novidades.cshtml
+++ b/ProjetoBRQ/ProjetoBRQ/Views/Home/Novidades.cshtml
@@ -70,7 +70,7 @@
             l += `<div class="article-copy">`;
             l += `<h1 class="article-title">${data.list[i].Title}</h1>`;
             l += `<h2 class="article-subtitle">${data.list[i].Description}</h2>`;
-            l += `<a class="btn article-link btn--arrow " href='@Url.Action("Preview","News")/${data.list[i].Id}'>read more</a>`;
+            l += `<a class="btn article-link btn--arrow " href='@Url.Action("Preview","News")/${data.list[i].Id}'>Saiba mais</a>`;
             l += `</div>`;
             l += `</li>`;
             l += `</article>`;
