--- a/ProjetoBRQ/ProjetoBRQ/Content/Layout/css/one-page-wonder.css
+++ b/ProjetoBRQ/ProjetoBRQ/Content/Layout/css/one-page-wonder.css
@@ -15,7 +15,7 @@ body {
 }
 
 header.masthead {
-    background: url('https://unsplash.it/1900/1080?image=304') no-repeat center center scroll;
+    background: url('https://i0.wp.com/www.ideiando.com/wp-content/uploads/2017/05/Mundo-corporativo.png?fit=700%2C400') no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
